crates/tree-sitter-txtx/test/corpus/basic.txt
================================================================================
Simple ETH Transfer
================================================================================

addon "evm" {
    chain_id = input.chain_id
    rpc_api_url = input.rpc_url
}

signer "sender" "evm::secret_key" {
    secret_key = input.sender_private_key
}

action "transfer" "evm::send_eth" {
    signer = signer.sender
    recipient_address = input.recipient_address
    amount = input.amount
    confirmations = 1
}

output "tx_hash" {
    value = action.transfer.tx_hash
    description = "Transaction hash"
}

--------------------------------------------------------------------------------

(runbook
  (addon_block
    network: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)))
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)))))
  (signer_block
    name: (string)
    type: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)))))
  (action_block
    name: (string)
    type: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)))
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)))
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)))
      (attribute
        key: (identifier)
        value: (number))))
  (output_block
    name: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (reference
          (identifier)
          (identifier)
          (identifier)))
      (attribute
        key: (identifier)
        value: (string)))))

================================================================================
Flow, Module, and Runbook Blocks
================================================================================

flow "mainnet" {
    description = "Production environment"
    chain_id = 1
    rpc_url = "https://mainnet.infura.io"
}

module "metadata" {
    name = "Test Runbook"
    version = "1.0.0"
}

runbook "embedded" {
    location = "./embedded.tx"
    inputs = { key: "value" }
}

--------------------------------------------------------------------------------

(runbook
  (flow_block
    name: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (string))
      (attribute
        key: (identifier)
        value: (number))
      (attribute
        key: (identifier)
        value: (string))))
  (module_block
    name: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (string))
      (attribute
        key: (identifier)
        value: (string))))
  (runbook_block
    name: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (string))
      (attribute
        key: (identifier)
        value: (object
          (object_field
            key: (identifier)
            value: (string)))))))

================================================================================
Comments and Complex Expressions
================================================================================

# This is a comment
addon "evm" {
    chain_id = 31337
    rpc_api_url = "http://localhost:8545"
}

// Another type of comment
action "calculate" "evm::uint256" {
    /* Multi-line
       comment */
    value = 100 * 2 + 50
    array_test = [1, 2, 3]
    object_test = { foo: "bar", baz: 123 }
}

--------------------------------------------------------------------------------

(runbook
  (comment)
  (addon_block
    network: (string)
    config: (block
      (attribute
        key: (identifier)
        value: (number))
      (attribute
        key: (identifier)
        value: (string))))
  (comment)
  (action_block
    name: (string)
    type: (string)
    config: (block
      (comment)
      (attribute
        key: (identifier)
        value: (binary_expression
          (binary_expression
            (number)
            (number))
          (number)))
      (attribute
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (attribute
        key: (identifier)
        value: (object
          (object_field
            key: (identifier)
            value: (string))
          (object_field
            key: (identifier)
            value: (number)))))))